--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-color",
+  "name": "s.color",
   "version": "0.0.1",
   "description": "A simple color library.",
   "main": "lib/index.js",
@@ -11,7 +11,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "prepublishOnly": "tsc -b && npm run test",
+    "prepare": "tsc -b && npm run test",
     "test": "jest"
   },
   "author": "Syler",
@@ -21,5 +21,15 @@
     "ts-jest": "^24.0.2",
     "@types/jest": "^24.0.18",
     "typescript": "^3.6.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TheRealSyler/s.color"
+  },
+  "keywords": [
+    "color",
+    "rgb",
+    "hex",
+    "rgba"
+  ]
 }
