--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,10 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
+
+orbs:
+  codecov: codecov/codecov@1.0.5
+
 jobs:
   build:
     docker:
@@ -35,3 +39,7 @@ jobs:
 
       # run tests!
       - run: npm run test
+
+      - codecov/upload:
+        file: coverage/lcov.info
+        flags: jest
