--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s.color",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "Simple color library.",
   "main": "lib/index.js",
   "files": [
@@ -20,6 +20,7 @@
   "devDependencies": {
     "jest": "^24.9.0",
     "ts-jest": "^24.0.2",
+    "suf-cli": "^0.1.0",
     "@types/jest": "^24.0.18",
     "typescript": "^3.6.2"
   },
@@ -33,7 +34,5 @@
     "hex",
     "rgba"
   ],
-  "dependencies": {
-    "suf-cli": "^0.1.0"
-  }
+  "dependencies": {}
 }
